--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -233,4 +233,45 @@ body {
     }
     }
 
+    .team .cards {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
     
+    .team .cards .head {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+    }
+    
+    .team .cards .items {
+        flex-basis: calc(50% - 10px);
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .team .cards .items img {
+        width: 50%;
+        height: auto;
+        object-fit: cover;
+    }
+    
+    /* Media Queries for different screen sizes */
+    
+    /* For tablets */
+    @media (max-width: 768px) {
+        .team .cards .items {
+            flex-basis: 100%;
+        }
+    }
+    
+    /* For mobile devices */
+    @media (max-width: 480px) {
+        .team .cards .items {
+            flex-basis: 100%;
+        }
+    }
