--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -27,8 +27,7 @@ body {
     padding-top: 20px;
     padding-right: 50px;
     padding-bottom: 100px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
+    font-family: 'Courier New', Courier, monospace;
     align-items: center;
     
     }
@@ -54,12 +53,14 @@ body {
     }
     }
     
-    /* ABOUT TEXT */
+    /* ABOUT  SECTION */
+
+    /* main-1 */
     .main-content .main-1 h4 {
     text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-    font-size: 3vw; /* Adjust as needed */
+    font-size: 2.5vw;
     }
     
     /* Media Queries for different screen sizes */
@@ -78,53 +79,71 @@ body {
     }
     }
     
-    
+    /* main-2 */
     .main-2 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .main-2 p {
+        margin-right: 70px; 
     }
     
     /* Media Queries for different screen sizes */
     
     /* For tablets */
     @media (max-width: 768px) {
-    .main-2 {
-    flex-direction: column;
-    }
+        .main-2 {
+            flex-direction: column;
+        }
     
-    .main-2 p {
-    order: 2;
-    }
+        .main-2 p {
+            order: 2;
+            margin-right: 0; 
+            margin-bottom: 20px;
+        }
     
-    .main-2 img {
-    order: 1;
-    }
+        .main-2 img {
+            order: 1;
+        }
     }
     
     /* For mobile devices */
     @media (max-width: 480px) {
-    .main-2 {
-    flex-direction: column;
-    }
+        .main-2 {
+            flex-direction: column;
+        }
     
-    .main-2 p {
-    order: 2;
-    }
+        .main-2 p {
+            order: 2;
+            margin-right: 0; /* Removes the space to the right of the text on mobile devices */
+            margin-bottom: 20px; /* Adds space below the text on mobile devices */
+        }
     
-    .main-2 img {
-    order: 1;
+        .main-2 img {
+            order: 1;
+        }
     }
-    }
-    
+
+
+    /* main 3 */
     .main-3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
     }
+    .main-3 h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+
+    }
     
     .main-3 h1, .main-3 p {
     text-align: left;
+    margin-left: 70px; 
+    
     }
     .content {
     text-align: center;
@@ -179,14 +198,22 @@ body {
     }
     
     
+    /* main 4 */
     .main-4 {
     display: flex;
     justify-content: space-between;
     align-items: center;
     }
+    .main-4 h1{
+        font-weight: bold;
+        font-size: 40px;
+        font-family: Arial, Helvetica, sans-serif;
+        padding-bottom: 40px;
+    }
     
     .main-4 h1, .main-4 p {
     text-align: left;
+    margin-right: 70px; 
     }
     .content {
     text-align: center;
