--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -5,22 +5,70 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    }
-    
-    .container {
-    max-width: 1500px; /* You can adjust this value based on your needs */
+}
+
+.container {
+    max-width: 1500px;
     width: 100%;
     margin: 0 auto;
-    }
-    
-    .header-content {
+}
+
+.header-content {
     display: flex;
+    flex-wrap: wrap; 
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+}
+
+.logo img {
+    max-width: 100%;
+}
+/* CSS */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.navbar .nav-items {
+    display: flex;
+    gap: 20px;
+}
+
+.navbar .nav-items a {
+    text-decoration: none;
+    color: black;
+}
+
+/* Media Queries for different screen sizes */
+
+/* For tablets */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: center;
     }
-    
-    .nav-items {
+
+    .navbar .nav-items {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
+
+/* For mobile devices */
+@media (max-width: 480px) {
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar .nav-items {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
+.nav-items {
     display: flex;
     gap: 30px;
     margin: 0;
@@ -29,377 +77,319 @@ body {
     padding-bottom: 100px;
     font-family: 'Courier New', Courier, monospace;
     align-items: center;
-    
-    }
-    
-    .nav-items {
     cursor: pointer;
-    }
-    
-    /* Media Queries for different screen sizes */
-    
-    /* For tablets */
-    @media (max-width: 768px) {
-    .header-content {
-    flex-direction: column;
-    }
-    }
-    
-    /* For mobile devices */
-    @media (max-width: 480px) {
-    .nav-items ul {
-    flex-direction: column;
-    align-items: center;
-    }
-    }
-    
-    /* ABOUT  SECTION */
+}
 
-    /* main-1 */
-    .main-content .main-1 h4 {
+/* ABOUT SECTION */
+
+/* main-1 */
+.main-content .main-1 h4 {
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: 2.5vw;
-    }
-    
-    /* Media Queries for different screen sizes */
-    
-    /* For tablets */
-    @media (max-width: 768px) {
-    .main-content .main-1 h2 {
-    font-size: 4vw; /* Adjust as needed */
-    }
-    }
-    
-    /* For mobile devices */
-    @media (max-width: 480px) {
-    .main-content .main-1 h2 {
-    font-size: 5vw; /* Adjust as needed */
-    }
-    }
-    
-    /* main-2 */
-    .main-2 {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    
-    .main-2 p {
-        margin-right: 70px; 
-    }
-    
-    /* Media Queries for different screen sizes */
-    
-    /* For tablets */
-    @media (max-width: 768px) {
-        .main-2 {
-            flex-direction: column;
-        }
-    
-        .main-2 p {
-            order: 2;
-            margin-right: 0; 
-            margin-bottom: 20px;
-        }
-    
-        .main-2 img {
-            order: 1;
-        }
-    }
-    
-    /* For mobile devices */
-    @media (max-width: 480px) {
-        .main-2 {
-            flex-direction: column;
-        }
-    
-        .main-2 p {
-            order: 2;
-            margin-right: 0; /* Removes the space to the right of the text on mobile devices */
-            margin-bottom: 20px; /* Adds space below the text on mobile devices */
-        }
-    
-        .main-2 img {
-            order: 1;
-        }
-    }
+}
 
-
-    /* main 3 */
-    .main-3 {
+/* main-2 */
+.main-2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    }
-    .main-3 h1{
+}
+
+.main-2 p {
+    margin-right: 70px;
+}
+
+/* main-3 */
+.main-3 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main-3 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
     font-size: 50px;
     padding-bottom: 50px;
+}
 
-    }
-    
-    .main-3 h1, .main-3 p {
+.main-3 h1, .main-3 p {
     text-align: left;
-    margin-left: 70px; 
-    
-    }
-    .content {
-    text-align: center;
-    margin: 100px auto;
-    }
-    
-    .content h1 {
-    margin-bottom: 0;
-    }
-    
-    .content p {
-    margin-top: 0;
-    }
-    /* Media Queries for different screen sizes */
-    
-    /* For tablets */
-    @media (max-width: 768px) {
-    .main-3 {
-    flex-direction: column;
-    }
-    
-    .main-3 h1 {
-    order: 1;
-    }
-    
-    .main-3 img {
-    order: 2;
-    }
-    
-    .main-3 h1, .main-3 p {
-    text-align: center;
-    }
-    }
-    
-    /* For mobile devices */
-    @media (max-width: 480px) {
-    .main-3 {
-    flex-direction: column;
-    }
-    
-    .main-3 h1 {
-    order: 1;
-    }
-    
-    .main-3 img {
-    order: 2;
-    }
-    
-    .main-3 h1, .main-3 p {
-    text-align: center;
-    }
-    }
-    
-    
-    /* main 4 */
-    .main-4 {
+    margin-left: 70px;
+}
+
+/* main-4 */
+.main-4 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    }
-    .main-4 h1{
-        font-weight: bold;
-        font-size: 40px;
-        font-family: Arial, Helvetica, sans-serif;
-        padding-bottom: 50px;
-    }
-    
-    .main-4 h1, .main-4 p {
+}
+
+.main-4 h1 {
+    font-weight: bold;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 50px;
+}
+
+.main-4 h1, .main-4 p {
     text-align: left;
-    margin-right: 70px; 
-    }
-    .content {
-    text-align: center;
-    margin: 100px auto;
-    }
-    
-    .content h1 {
-    margin-bottom: 0;
-    }
-    
-    .content p {
-    margin-top: 0;
-    }
-    
-    /* Media Queries for different screen sizes */
-    
-    /* For tablets */
-    @media (max-width: 768px) {
-    .main-4 {
+    margin-right: 70px;
+}
+
+/* TEAM */
+.team .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: start;
+}
+
+.team .head h1 {
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 50px;
+}
+
+.team .cards .head {
+    display: flex;
+    justify-content: center;
+    text-align: start;
+    width: 100%;
+}
+
+.team .cards .items {
+    flex-basis: calc(40% - 10px);
+    margin-bottom: 20px;
+    display: flex;
     flex-direction: column;
-    }
-    
-    .main-4 .content {
-    order: 2;
-    }
-    
-    .main-4 img {
-    order: 1;
-    }
-    }
-    
-    /* For mobile devices */
-    @media (max-width: 480px) {
-    .main-4 {
+    align-items: center;
+}
+
+.team .cards .items h1 {
+    color: green;
+    text-align: start;
+}
+
+.team .cards .items p {
+    color: rgb(111, 111, 131);
+    text-align: start;
+}
+
+.team .cards .items img {
+    width: 50%;
+    height: auto;
+    object-fit: cover;
+}
+
+/* Footer */
+.footer .content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer .content ul {
+    display: flex;
     flex-direction: column;
-    }
-    
-    .main-4 .content {
-    order: 2;
-    }
-    
-    .main-4 img {
+    list-style: none;
+    padding: 0;
+    text-align: left;
+    margin-right: 50px; /* Adds space to the right of the links */
+}
+
+.footer .content ul li {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.footer .content ul li i {
+    margin-right: 10px;
+}
+
+.footer .image-footer {
     order: 1;
-    }
+}
+
+/* Media Queries for different screen sizes */
+
+/* For tablets */
+@media (max-width: 768px) {
+    body {
+        padding: 20px;
     }
 
-    .team .cards {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
+    .header-content {
+        flex-direction: column;
+        text-align: center;
     }
-    
 
-    /* TEAM */
-    .team .cards {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+    .nav-items {
+        flex-direction: column;
         align-items: center;
-        text-align: start;
+        text-align: center;
+        padding-right: 0;
     }
-    
-    .team .head h1 {
-        font-weight: bold;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        font-size: 50px;
+
+    .main-1 h4 {
+        font-size: 4vw;
     }
-    
-    .team .cards .head {
-        display: flex;
-        justify-content: center;
-        text-align: start;
-        width: 100%;
+
+    .main-2 {
+        flex-direction: column;
     }
-    
-    .team .cards .items {
-        flex-basis: calc(40% - 10px);
+
+    .main-2 p {
+        order: 2;
+        margin-right: 0;
         margin-bottom: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
     }
-    
-    .team .cards .items h1 {
-        color: green;
-        text-align: start;
-    }
-    
-    .team .cards .items p {
-        color: rgb(111, 111, 131);
-        text-align: start;
-    }
-    
-    .team .cards .items img {
-        width: 50%;
-        height: auto;
-        object-fit: cover;
-    }
-    
-    /* Media Queries for different screen sizes */
-    
-    /* For tablets */
-    @media (max-width: 768px) {
-        .team .cards .items {
-            flex-basis: 100%;
-        }
-    }
-    
-    /* For mobile devices */
-    @media (max-width: 480px) {
-        .team .cards .items {
-            flex-basis: 100%;
-        }
-    }
-    .footer .content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    
-    .footer .content ul {
-        display: flex;
-        flex-direction: column;
-        list-style: none;
-        padding: 0;
-        text-align: left;
-        margin-right: 50px; /* Adds space to the right of the links */
-    }
-    
-    .footer .content ul li {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        margin-bottom: 10px;
-    }
-    
-    .footer .content ul li i {
-        margin-right: 10px;
-    }
-    
-    .footer .image-footer {
+
+    .main-2 img {
         order: 1;
     }
-    
-    /* Media Queries for different screen sizes */
-    
-    /* For tablets */
-    @media (max-width: 768px) {
-        .footer .content {
-            flex-direction: column;
-        }
-    
-        .footer .content ul {
-            text-align: center;
-            margin-right: 0; /* Removes the space to the right of the links on tablets */
-        }
-    
-        .footer .content ul li {
-            justify-content: center;
-        }
-    
-        .footer .image-footer {
-            order: 0;
-            margin-bottom: 20px;
-        }
+
+    .main-3 {
+        flex-direction: column;
     }
-    
-    /* For mobile devices */
-    @media (max-width: 480px) {
-        .footer .content {
-            flex-direction: column;
-        }
-    
-        .footer .content ul {
-            text-align: center;
-            margin-right: 0;
-        }
-    
-        .footer .content ul li {
-            justify-content: center;
-        }
-    
-        .footer .image-footer {
-            order: 0;
-            margin-bottom: 20px;
-        }
+
+    .main-3 h1 {
+        order: 1;
     }
+
+    .main-3 img {
+        order: 2;
+    }
+
+    .main-3 h1,
+    .main-3 p {
+        text-align: center;
+    }
+
+    .main-4 {
+        flex-direction: column;
+    }
+
+    .main-4 .content {
+        order: 2;
+    }
+
+    .main-4 img {
+        order: 1;
+    }
+
+    .team .cards .items {
+        flex-basis: 100%;
+    }
+
+    .footer .content {
+        flex-direction: column;
+    }
+
+    .footer .content ul {
+        text-align: center;
+        margin-right: 0;
+    }
+
+    .footer .content ul li {
+        justify-content: center;
+    }
+
+    .footer .image-footer {
+        order: 0;
+        margin-bottom: 20px;
+    }
+}
+
+/* For mobile devices */
+@media (max-width: 480px) {
+    body {
+        padding: 20px;
+    }
+
+    .header-content {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .nav-items {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding-right: 0;
+    }
+
+    .main-1 h4 {
+        font-size: 5vw;
+    }
+
+    .main-2 {
+        flex-direction: column;
+    }
+
+    .main-2 p {
+        order: 2;
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .main-2 img {
+        order: 1;
+    }
+
+    .main-3 {
+        flex-direction: column;
+    }
+
+    .main-3 h1 {
+        order: 1;
+    }
+
+    .main-3 img {
+        order: 2;
+    }
+
+    .main-3 h1,
+    .main-3 p {
+        text-align: center;
+    }
+
+    .main-4 {
+        flex-direction: column;
+    }
+
+    .main-4 .content {
+        order: 2;
+    }
+
+    .main-4 img {
+        order: 1;
+    }
+
+    .team .cards .items {
+        flex-basis: 100%;
+    }
+
+    .footer .content {
+        flex-direction: column;
+    }
+
+    .footer .content ul {
+        text-align: center;
+        margin-right: 0;
+    }
+
+    .footer .content ul li {
+        justify-content: center;
+    }
+
+    .footer .image-footer {
+        order: 0;
+        margin-bottom: 20px;
+    }
+}
