added new  repo with items

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -14,6 +14,13 @@ body {
     height: 100px; 
 }
 
+.navbar-nav .nav-link {
+    color: black; /* Dark color for the links */
+    font-size: 30px; /* Adjust as needed */
+    margin-right: 20px;
+   
+}
+
 .logo {
     height: 100px; 
 }
