--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,133 +1,267 @@
-.section#hero{
-    background-color: #f00d0d;
-    padding: 20px;
-    margin: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 
-}
 
-a{
-    color: #107a26;
-    text-decoration: none;
-}
-ul{
-    list-style: none;
+body {
+  margin: 0;
+  padding: 0;
+  /* height: 100%; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
 }
 
 
-/* Navbar */
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    background-color: #f00d0d;
+
+.links {
+  color: #107a26;
+  text-decoration: none;
+
+}
+ul {
+  list-style: none;
 }
 
-
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.content {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  width: 50%;
+  align-items: center;
+  color: black;
+  font-size: 16px; 
+  font-weight: bold;
+  margin: 0;
+  text-align: left;
+  padding-left: 10%;
 }
 
-.img-text{
-    display: flex;
-    justify-content: end;
+h1 {
+  margin-bottom: 80px;
 }
 
-.img-left{
-    align-items: end;
-    justify-items: end;
-    display: flex;
+.header {
+  padding-top: 40px;
+  position: fixed;
+  top: 0;
+}
+
+.custom-navbar {
+  background-color: white;
+}
+
+/* Add other styles as needed */
+
+
+
+/* .nav-bar{
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+} */
+
+.img-text {
+  display: flex;
+  justify-content: end;
+}
+
+.img-left {
+  align-items: end;
+  justify-items: end;
+  display: block;
+
 }
 
 /* Subscribe */
 
 .form {
-    display: flex;
-    flex-direction: column;
-    background: #fff;
-}  
-  .title {
-    font-size: 2rem;
-    line-height: 2rem;
-    font-weight: 700;
-    letter-spacing: -0.025em;
-    color: #137c29;
-  }
-  
-  .description {
-    line-height: 1.5rem;
-    font-size: 1rem;
-    margin-top: 1rem;
-    color: rgb(209 213 219);
-  }
-  
-  .form div {
-    display: flex;
-    margin-top: 1rem;
-    column-gap: 0.5rem;
-  }
-  
-  .form div input {
-    outline: none;
-    line-height: 1.5rem;
-    font-size: 0.875rem;
-    color: #0c0c0c;
-    padding: 0.5rem 0.875rem;
-    background-color: rgb(255 255 255 / 0.05);
-    border: 1px solid #137c29;
-    border-radius: 0.375rem;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  background: #fff;
 }
-  
-  .form div input::placeholder {
-    color: #0c0c0c;
-  }
-  
-  .form div input:focus {
-    border: 1px solid #137c29;
-  }
-  
-  .form div button {
-    color: #fff;
-    font-weight: 600;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    padding: 0.625rem 0.875rem;
-    background-color: #137c29;
-    border-radius: 0.375rem;
-    border: none;
-    outline: none;
-  }
-
-  button {
-    color: #fff;
-    font-weight: 600;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    padding: 0.625rem 0.875rem;
-    background-color: #137c29;
-    border-radius: 0.375rem;
-    border: none;
-    outline: none;
-  }
-
-  .footer-text-left{
-    display: flex;
-    justify-content: space-evenly;
-  }
-
-.copy-right{
-    display: flex;
-    justify-content: space-evenly;
-    padding: 20px;
-    margin: 20px;
-   
-
+.title {
+  font-size: 2rem;
+  line-height: 2rem;
+  font-weight: 700;
+  letter-spacing: -0.025em;
+  color: #137c29;
 }
 
-.quote{
-    text-align: start;
+
+.title-white {
+  font-size: 2rem;
+  line-height: 2rem;
+  font-weight: 700;
+  letter-spacing: -0.025em;
+  color: #fff;
 }
+
+.description {
+  line-height: 1.5rem;
+  font-size: 1rem;
+  margin-top: 1rem;
+  color: rgb(209 213 219);
+}
+
+.form div {
+  display: flex;
+  margin-top: 1rem;
+  column-gap: 0.5rem;
+}
+
+.form div input {
+  outline: none;
+  line-height: 1.5rem;
+  font-size: 0.875rem;
+  color: #0c0c0c;
+  padding: 0.5rem 0.875rem;
+  background-color: rgb(255 255 255 / 0.05);
+  border: 1px solid #137c29;
+  border-radius: 0.375rem;
+  width: 100%;
+}
+
+.form div input::placeholder {
+  color: #0c0c0c;
+}
+
+.form div input:focus {
+  border: 1px solid #137c29;
+}
+
+.form div button {
+  color: #fff;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding: 0.625rem 0.875rem;
+  background-color: #137c29;
+  border-radius: 0.375rem;
+  border: none;
+  outline: none;
+}
+
+button {
+  color: #fff;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding: 0.625rem 0.875rem;
+  background-color: #137c29;
+  border-radius: 0.375rem;
+  border: none;
+  outline: none;
+  font-family: S;
+}
+
+.footer-text-left {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.copy-right {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+  margin: 20px;
+}
+
+.quote {
+  text-align: start;
+}
+
+.hero-socials {
+  display: flex;
+  flex-direction: row;
+  column-gap: 50px;
+}
+
+.icon {
+  max-height: 40px;
+}
+
+.icon-large {
+  max-height: 80px;
+  align-items: center;
+}
+
+/* #posts {
+  padding-top: 3rem;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.image-container {
+  position: relative;
+  cursor: pointer;
+  max-width: 20%;
+  max-height: 15%;
+  overflow: hidden;
+
+}
+
+.image-container img {
+  max-width: 100%;
+  height: auto;
+  transition: transform 0.5s ease; /* Add transition for slow animation */
+/* } */
+
+.overlay-link {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.5s ease; /* Add transition for slow animation */
+}
+
+
+.post-container {
+  margin: 20px;
+}
+
+.post-title {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.post-content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.post-image {
+  flex: 0 0 30%;
+  max-height: 60%;
+  margin-right: 20px;
+  
+}
+
+.post-text {
+  flex: 0 0 65%;
+}
+
+@media (max-width: 768px) {
+  .post-image {
+    flex: 0 0 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .post-text {
+    flex: 0 0 100%;
+  }
+}
+
+
+
+/* 
+.overlay-text{
+  background-image: image("./assets/images/black-background.png");
+} */
+
+
 
