added new model h

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,14 @@ header {
   align-items: start;
 }
 
+.get-involved{
+  padding-top: 70px;
+  margin-left: 60px;
+  padding-left: 600px;
+  text-align: start;
+  align-items: start;
+}
+
 
 
 .links {
