added contacts and projects page

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -5,11 +5,8 @@ body {
     align-items: center;
 }
 
-/* Default styles for larger screens */
-body {
-    padding-left: 100px;
-    padding-right: 100px;
-}
+
+
 .navbar {
     height: 100px; 
 }
@@ -18,22 +15,10 @@ body {
     color: black; /* Dark color for the links */
     font-size: 30px; /* Adjust as needed */
     margin-right: 20px;
-   
 }
 
 .logo {
     height: 100px; 
-}
-/* Media query for smaller screens */
-@media screen and (max-width: 768px) {
-    body {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-
-    .container {
-        max-width: 100%; /* Set to 100% to make it fluid */
-    }
 }
 
 .container {
@@ -41,7 +26,6 @@ body {
     width: 100%;
     margin: 0 auto;
 }
-
 
 .header-content {
     display: flex;
@@ -54,12 +38,6 @@ body {
 .logo img {
     max-width: 100%;
 }
-/* CSS */
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-}
 
 .navbar .nav-items {
     display: flex;
@@ -71,105 +49,6 @@ body {
     color: black;
 }
 
-/* Media Queries for different screen sizes */
-
-/* For tablets */
-@media (max-width: 768px) {
-    .navbar {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .navbar .nav-items {
-        flex-direction: column;
-        gap: 10px;
-    }
-}
-
-/* For mobile devices */
-@media (max-width: 480px) {
-    .navbar {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .navbar .nav-items {
-        flex-direction: column;
-        gap: 10px;
-    }
-}
-.nav-items {
-    display: flex;
-    gap: 30px;
-    margin: 0;
-    padding-top: 20px;
-    padding-right: 50px;
-    padding-bottom: 100px;
-    font-family: 'Courier New', Courier, monospace;
-    align-items: center;
-    cursor: pointer;
-}
-
-/* ABOUT SECTION */
-
-/* main-1 */
-.main-content .main-1 h4 {
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    font-size: 2.5vw;
-}
-
-/* main-2 */
-.main-2 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.main-2 p {
-    margin-right: 70px;
-}
-
-/* main-3 */
-.main-3 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.main-3 h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    font-size: 50px;
-    padding-bottom: 50px;
-}
-
-.main-3 h1, .main-3 p {
-    text-align: left;
-    margin-left: 70px;
-}
-
-/* main-4 */
-.main-4 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.main-4 h1 {
-    font-weight: bold;
-    font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 50px;
-}
-
-.main-4 h1, .main-4 p {
-    text-align: left;
-    margin-right: 70px;
-}
-
-/* TEAM */
 .team .cards {
     display: flex;
     flex-wrap: wrap;
@@ -215,7 +94,6 @@ body {
     object-fit: cover;
 }
 
-/* Footer */
 .footer .content {
     display: flex;
     justify-content: space-between;
@@ -246,180 +124,18 @@ body {
     order: 1;
 }
 
-/* Media Queries for different screen sizes */
-
-/* For tablets */
-@media (max-width: 768px) {
-    body {
-        padding: 20px;
-    }
-
-    .header-content {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .nav-items {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding-right: 0;
-    }
-
-    .main-1 h4 {
-        font-size: 4vw;
-    }
-
-    .main-2 {
-        flex-direction: column;
-    }
-
-    .main-2 p {
-        order: 2;
-        margin-right: 0;
-        margin-bottom: 20px;
-    }
-
-    .main-2 img {
-        order: 1;
-    }
-
-    .main-3 {
-        flex-direction: column;
-    }
-
-    .main-3 h1 {
-        order: 1;
-    }
-
-    .main-3 img {
-        order: 2;
-    }
-
-    .main-3 h1,
-    .main-3 p {
-        text-align: center;
-    }
-
-    .main-4 {
-        flex-direction: column;
-    }
-
-    .main-4 .content {
-        order: 2;
-    }
-
-    .main-4 img {
-        order: 1;
-    }
-
-    .team .cards .items {
-        flex-basis: 100%;
-    }
-
-    .footer .content {
-        flex-direction: column;
-    }
-
-    .footer .content ul {
-        text-align: center;
-        margin-right: 0;
-    }
-
-    .footer .content ul li {
-        justify-content: center;
-    }
-
-    .footer .image-footer {
-        order: 0;
-        margin-bottom: 20px;
-    }
+.footer-text-left {
+    display: flex;
+    justify-content: space-evenly;
 }
 
-/* For mobile devices */
-@media (max-width: 480px) {
-    body {
-        padding: 20px;
-    }
+.copy-right {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px;
+    margin: 20px;
+}
 
-    .header-content {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .nav-items {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding-right: 0;
-    }
-
-    .main-1 h4 {
-        font-size: 5vw;
-    }
-
-    .main-2 {
-        flex-direction: column;
-    }
-
-    .main-2 p {
-        order: 2;
-        margin-right: 0;
-        margin-bottom: 20px;
-    }
-
-    .main-2 img {
-        order: 1;
-    }
-
-    .main-3 {
-        flex-direction: column;
-    }
-
-    .main-3 h1 {
-        order: 1;
-    }
-
-    .main-3 img {
-        order: 2;
-    }
-
-    .main-3 h1,
-    .main-3 p {
-        text-align: center;
-    }
-
-    .main-4 {
-        flex-direction: column;
-    }
-
-    .main-4 .content {
-        order: 2;
-    }
-
-    .main-4 img {
-        order: 1;
-    }
-
-    .team .cards .items {
-        flex-basis: 100%;
-    }
-
-    .footer .content {
-        flex-direction: column;
-    }
-
-    .footer .content ul {
-        text-align: center;
-        margin-right: 0;
-    }
-
-    .footer .content ul li {
-        justify-content: center;
-    }
-
-    .footer .image-footer {
-        order: 0;
-        margin-bottom: 20px;
-    }
+.quote {
+    text-align: start;
 }
