--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+
 nav {
   top: 0;
   left: 0;
@@ -12,10 +13,25 @@ nav {
   align-items: center;
 }
 
+
+
+
 .navbar-brand {
   position: absolute;
   left: 0;
   padding-left: 150px;
+}
+
+h2{
+  color: #137c29;
+}
+
+.project-card {
+  margin-bottom: 20px;
+}
+.project-img {
+  max-width: 100%;
+  height: auto;
 }
 
 nav ul li {
@@ -32,7 +48,7 @@ nav ul li {
   position: absolute;
   top: 0;
   right: 0;
-  width: 20%;
+  width: 30%;
   height: auto;
   padding-right: 40px;
 }
@@ -111,6 +127,8 @@ h1 {
 }
 
 /* Add other styles as needed */
+
+
 
 .button-join{
   background-color: #b57e42;
@@ -336,3 +354,48 @@ button {
 
 
 
+
+.team .cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: start;
+}
+
+.team .head h2 {
+  font-weight: bold;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 50px;
+}
+
+.team .cards .head {
+  display: flex;
+  justify-content: center;
+  text-align: start;
+  width: 100%;
+}
+
+.team .cards .items {
+  flex-basis: calc(40% - 10px);
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.team .cards .items h2 {
+  color: green;
+  text-align: start;
+}
+
+.team .cards .items p {
+  color: rgb(111, 111, 131);
+  text-align: start;
+}
+
+.team .cards .items img {
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+}
